--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,9 @@ name = "pypi"
 [packages]
 networkx = "*"
 matplotlib = "*"
+numpy = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.10"
